Add submodule and change cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,10 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
 find_package( OpenMP REQUIRED )
 
-
 find_package( LAPACK REQUIRED )
 include_directories( ${LAPACK_INCLUDE_DIR} )
-find_package( BLAS )
-find_package( Blaze REQUIRED )
-find_package( BlazeTensor REQUIRED )
 
+find_package( BLAS )
 add_compile_definitions( BLAZE_USE_SHARED_MEMORY_PARALLELIZATION=0 )
 message( STATUS "Blaze: Shared memory parallelization disabled" )
 if( BLAS_FOUND )
@@ -30,15 +27,16 @@ else()
     message( STATUS "Blaze: BLAS mode disabled" )
     add_compile_definitions( BLAZE_BLAS_MODE=0 )
 endif()
-include_directories( ${Blaze_INCLUDE_DIR} )
 
+include_directories( ${CMAKE_SOURCE_DIR}/ext/blaze )
+include_directories( ${CMAKE_SOURCE_DIR}/ext/blaze_tensor )
 
 set( CORE_LIBRARIES OpenMP::OpenMP_CXX -lstdc++fs )
 
 ### BUILD ###
-file( GLOB_RECURSE SRCS RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp" "include/*.h" "include/*.hpp" )
-
+file( GLOB_RECURSE SRCS RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp" "include/*.h" )
 include_directories( ${CMAKE_SOURCE_DIR}/include )
+
 add_executable( ${CMAKE_PROJECT_NAME} ${SRCS} )
 target_link_libraries( ${CMAKE_PROJECT_NAME} ${CORE_LIBRARIES} )
 target_compile_options( ${CMAKE_PROJECT_NAME} PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>" )
